typescript/checker/tests/conformance/expressions/typeGuards/typeGuardsInFunctionAndModuleBlock.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            143,
        ),
        hi: BytePos(
            144,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInFunctionAndModuleBlock.ts:5:11
  |
5 |         ? x
  |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            454,
        ),
        hi: BytePos(
            455,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInFunctionAndModuleBlock.ts:15:11
   |
15 |         ? x
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            839,
        ),
        hi: BytePos(
            840,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInFunctionAndModuleBlock.ts:25:11
   |
25 |         ? x
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1156,
        ),
        hi: BytePos(
            1157,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInFunctionAndModuleBlock.ts:35:11
   |
35 |         ? x
   |           ^

